--- a/personal.html
+++ b/personal.html
@@ -6,6 +6,11 @@
 <meta name="description" content="Personal KZ statistics">
 <link rel="stylesheet" href="style.css">
 
+<meta property="og:title" content="KZ Personal Recap 2022" />
+<meta property="og:type" content="website" />
+<meta property="og:image" content="img/android-icon-192x192.png?" />
+<meta property="og:description" content="Personal KZ statistics" />
+
 <link rel="apple-touch-icon" sizes="57x57" href="img/apple-icon-57x57.png?">
 <link rel="apple-touch-icon" sizes="60x60" href="img/apple-icon-60x60.png?">
 <link rel="apple-touch-icon" sizes="72x72" href="img/apple-icon-72x72.png?">
