--- a/index.html
+++ b/index.html
@@ -8,25 +8,25 @@
 
 <meta property="og:title" content="KZ Community Recap 2022" />
 <meta property="og:type" content="website" />
-<meta property="og:image" content="img/android-icon-192x192.png?" />
+<meta property="og:image" content="https://szwagi.github.io/img/android-icon-192x192.png" />
 <meta property="og:description" content="Statistics of the KZ community" />
 
-<link rel="apple-touch-icon" sizes="57x57" href="img/apple-icon-57x57.png?">
-<link rel="apple-touch-icon" sizes="60x60" href="img/apple-icon-60x60.png?">
-<link rel="apple-touch-icon" sizes="72x72" href="img/apple-icon-72x72.png?">
-<link rel="apple-touch-icon" sizes="76x76" href="img/apple-icon-76x76.png?">
-<link rel="apple-touch-icon" sizes="114x114" href="img/apple-icon-114x114.png?">
-<link rel="apple-touch-icon" sizes="120x120" href="img/apple-icon-120x120.png?">
-<link rel="apple-touch-icon" sizes="144x144" href="img/apple-icon-144x144.png?">
-<link rel="apple-touch-icon" sizes="152x152" href="img/apple-icon-152x152.png?">
-<link rel="apple-touch-icon" sizes="180x180" href="img/apple-icon-180x180.png?">
-<link rel="icon" type="image/png" sizes="192x192" href="img/android-icon-192x192.png?">
-<link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png?">
-<link rel="icon" type="image/png" sizes="96x96" href="img/favicon-96x96.png?">
-<link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png?">
+<link rel="apple-touch-icon" sizes="57x57" href="img/apple-icon-57x57.png">
+<link rel="apple-touch-icon" sizes="60x60" href="img/apple-icon-60x60.png">
+<link rel="apple-touch-icon" sizes="72x72" href="img/apple-icon-72x72.png">
+<link rel="apple-touch-icon" sizes="76x76" href="img/apple-icon-76x76.png">
+<link rel="apple-touch-icon" sizes="114x114" href="img/apple-icon-114x114.png">
+<link rel="apple-touch-icon" sizes="120x120" href="img/apple-icon-120x120.png">
+<link rel="apple-touch-icon" sizes="144x144" href="img/apple-icon-144x144.png">
+<link rel="apple-touch-icon" sizes="152x152" href="img/apple-icon-152x152.png">
+<link rel="apple-touch-icon" sizes="180x180" href="img/apple-icon-180x180.png">
+<link rel="icon" type="image/png" sizes="192x192" href="img/android-icon-192x192.png">
+<link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="96x96" href="img/favicon-96x96.png">
+<link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
 <link rel="manifest" href="img/manifest.json">
 <meta name="msapplication-TileColor" content="#171a1c">
-<meta name="msapplication-TileImage" content="img/ms-icon-144x144.png?">
+<meta name="msapplication-TileImage" content="img/ms-icon-144x144.png">
 <meta name="theme-color" content="#171a1c">
 
 
